[package]
name = "forx-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = "0.11.10"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
